[package]
name = "rust-profanity"
version = "0.1.0"
edition = "2024"

[dependencies]
ocl = "0.19"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
sha3 = "0.10"
ethers-core = "2.0"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
bip39 = "2.0"
bip32 = "0.5"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
